# GameNative

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: proton-9.0-arm64ec.txz  proton-9.0-x86_64.txz
app/src/main/assets/dxwrapper/: vkd3d-2.12.tzst
app/src/main/assets/fexcore/: fexcore-2508.tzst
app/src/main/cpp/extras/: CMakeLists.txt
app/src/main/java/app/gamenative/: MainActivity.kt  PluviaApp.kt  PrefManager.kt
app/src/main/java/app/gamenative/data/: AppInfo.kt  SaveFilePattern.kt  UserFileInfo.kt
app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
app/src/main/java/app/gamenative/di/: DatabaseModule.kt
app/src/main/java/app/gamenative/events/: AndroidEvent.kt
app/src/main/java/app/gamenative/service/: DownloadService.kt  SteamAutoCloud.kt  SteamService.kt
app/src/main/java/app/gamenative/ui/: PluviaMain.kt
app/src/main/java/app/gamenative/utils/: ContainerMigrator.kt  ContainerUtils.kt  GameFeedbackUtils.kt  HardwareUtils.kt  IntentLaunchManager.kt  KeyValueUtils.kt  ShortcutUtils.kt  SteamUtils.kt
app/src/main/java/com/winlator/alsaserver/: ALSAClient.java  ALSARequestHandler.java
app/src/main/java/com/winlator/box86_64/: Box86_64PresetManager.java
app/src/main/java/com/winlator/container/: Container.java  ContainerData.kt  ContainerManager.java
app/src/main/java/com/winlator/contents/: AdrenotoolsManager.java  (+2 more)
app/src/main/res/mipmap-anydpi-v26/: ic_shortcut_filter.xml
app/src/main/res/values/: arrays.xml  colors_shortcut.xml  strings.xml
gradle/: libs.versions.toml
(+57 files in other folders)
